kylin-recorder (1.2.23kord~rc6) v101; urgency=high

  * 修复bug# 39136：应用的弹窗出现时应该于应用居中出现，而不是桌面居中出现
  * 修复bug# 38975：录音过程中关闭麒麟录音后，再次打开麒麟录音时不能打开，终端报段错误
  * 修复bug# 38923：深色模式下，关于弹窗链接没有反白
  * 修复bug# 38883：主界面在正常窗口和 mini窗口之间切换时，任务栏麒麟录音图标闪烁

 -- zoujunnan <zoujunnan@kylinos.cn>  Thu, 25 Feb 2021 09:30:00 +0800

kylin-recorder (1.2.23kord~rc5) v101; urgency=medium

  * 修复bug# 38511：更改系统字体大小后，麒麟录音文字显示不全

 -- zoujunnan <zoujunnan@kylinos.cn>  Sun, 21 Feb 2021 09:30:00 +0800

kylin-recorder (1.2.23kord~rc4) v101; urgency=medium

  * 2021/02/04版本

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 4 Feb 2021 09:30:00 +0800

kylin-recorder (1.2.23kord~rc3) v101; urgency=medium

  * 修复bug# 26216：录制时间过长时，保存弹窗弹出时间过长
  * 修复bug# 34933：录音过程中直接点击关闭按钮时能够提示保存当前录音
  * 修复bug# 24299：文件列表排列
  * 修复bug# 37810：关于弹窗邮箱链接右键功能没有去除

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 3 Feb 2021 09:50:00 +0800

kylin-recorder (1.2.23kord~rc2) v101; urgency=medium

  * 去掉弹窗的border-radius,适配协议

 -- baijincheng <baijincheng@kylinos.cn>  Mon, 1 Feb 2021 17:00:00 +0800

kylin-recorder (1.2.23kord~rc1) v101; urgency=medium

  * 更新版本号

 -- baijincheng <baijincheng@kylinos.cn>  Mon, 1 Feb 2021 11:30:00 +0800

kylin-recorder (1.2.23) v101; urgency=medium

  * 修复bug# 35865：设置窗口默认不居中显示 
  * 修复bug# 35607：保存录音时可将录音命名为.mp3，导致此音频变为隐藏文件  
  * 修复bug# 34915：在麒麟录音界面删除的录音文件，不会进入回收站 
  * 修复bug# 24333：文件列表缺少文件右键点击功能 

 -- baijincheng <baijincheng@kylinos.cn>  Fri, 29 Jan 2021 09:40:00 +0800

kylin-recorder (1.2.22) v101; urgency=medium

  * 关于界面服务与支持修改为链接

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 28 Jan 2021 09:40:00 +0800

kylin-recorder (1.2.21) v101; urgency=medium

  * 修复bug# 36272：【中文化】【麒麟录音】播放/暂停、删除按钮的悬浮框未汉化

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 27 Jan 2021 20:05:00 +0800

kylin-recorder (1.2.20) v101; urgency=medium

  * 修复bug# 34901：深色主题下主界面边框有白边
  * 修复bug# 32064：保存文件时保存文件失败
  * 修复bug# 25006：深色模式下，设置弹窗UI异常（设置界面白边）

 -- baijincheng <baijincheng@kylinos.cn>  Mon, 25 Jan 2021 20:25:00 +0800
