@@ -1,3 +1,9 @@
+kylin-recorder (1.2.23kord~rc7) v101; urgency=high
+
+  *解决mini模式下录音时点击关闭弹出提示框后还能关闭的问题。
+
+ -- baijincheng <baijincheng@kylinos.cn>  Thu, 25 Feb 2021 15:38:00 +0800
+
 kylin-recorder (1.2.23kord~rc6) v101; urgency=high
 
   * 修复bug# 39136：应用的弹窗出现时应该于应用居中出现，而不是桌面居中出现
